# WireGuard-ESP32-Arduino

./: CMakeLists.txt  LICENSE  README.md  blake2s.c  blake2s.h  chacha20.c  chacha20poly1305.c  crypto.h  library.properties  poly1305-donna-32.h  poly1305-donna.h  wireguard-platform.h  wireguard.c  wireguard.h  wireguardif.c  wireguardif.h  x25519.c
example/: wireguard-platform.c
examples/disconnect/: disconnect.ino
examples/http_over_wireguard/: Computer.conf  http_over_wireguard.ino
examples/uptime_post/: uptime_post.ino
examples/uptime_udp/: uptime_udp.ino
src/: WireGuard-ESP32.h  WireGuard.cpp  WireGuard.hpp  crypto.c  crypto.h  wireguard-platform.c  wireguard-platform.h  wireguard.c  wireguard.h  wireguardif.c  wireguardif.h
src/crypto/cortex/: README  cortex_m0_reduce25519.s  mul.s  scalarmult.c  scalarmult.h  sqr.s
src/crypto/refc/: blake2s.c
